syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "CommonProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

/* Enumerations */

enum LoginCode {
    SUC = 0;
   	ERROR_PWD = 1;
   	OCCUPIED = 2;
   	NOT_EXIST = 3;
}

enum CommonStat {
	OK = 0;
	ERROR = 1;
}

enum ItemType {
	BUILD = 0;
	MATERIAL = 1;
}

/* Basically Informations */

message Position {
	int32 posX = 1;
	int32 posY = 2;
	int32 posZ = 3;
	
}

message ModInfo {
	int32 modId = 1;
	int32 motion = 2;
	int32 orientation = 3;
}

message MotionInfo {
	int32 motion = 1;
	int32 efficacy = 2;
	float speed = 3;
}

message SurvivalInfo {
	int32 health = 1;
	int32 hunger = 2;
	int32 spirit = 3;
	int32 comfort = 4;
	
}

message EnergyInfo {
	int32 strength = 1;
	int32 endurance = 2;
	int32 agility = 3;
	int32 defence = 4;
}


message IdentifyInfo {
	int32 ID = 1;
	string name = 2;
	ItemType type = 3;
}

/* Basically Objects */

message Item {
	IdentifyInfo identify = 1;
	Position position = 2;
	ModInfo modInfo = 3;
	SurvivalInfo survivalInfo= 4;
}

message CharacterEquipMod {
	ModInfo hair = 1;
	ModInfo face = 2;
	ModInfo pants = 3;
	ModInfo shoes = 4;
	ModInfo top = 5;
	ModInfo body = 6;
	ModInfo wrist = 7;
	ModInfo leftHold = 8;
	ModInfo rightHold = 9;
}


message Character {
	IdentifyInfo identify = 1;
	Position position = 2;
	ModInfo modInfo = 3;
	SurvivalInfo survivalInfo= 4;
	int32 mapId = 5;
	EnergyInfo energyInfo = 6;
	CharacterEquipMod equipMod = 7;
}


message CommonResponse {
	CommonStat stat = 1;
}

/* Item Events */

message ItemMoveEvent {
	IdentifyInfo identify = 1;
	Position fromPos = 2;
	Position toPos = 3;
	float speed = 4;
	MotionInfo playMotion = 5;
}

message ItemCreateEvent {
	Item item = 1;
}

message ItemDestroyEvent {
	IdentifyInfo identify = 1;
}

/* Character Event */

message CharacterCreateEvent {
	Character character = 1;
}


