syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "ServerWorldProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "common.proto";

message RegionServerInfo {
	string serverHost = 1;
	int32 serverPort = 2;
	int32 mapid = 3;
}

message UserArrivedWorldRequest {
	string gateHost = 1;
	int32 gatePort = 2;
	int32 uid = 3;
	int32 mapId = 4;
}

message UserTransToMapRequest {
	int32 fromId = 1;
	int32 toId = 2;
	int32 uid = 3;
}

message UserLeaveWorldRequest {
	int32 uid = 1;
	int32 mapId = 2;
}

message GateRegisterRequest {
	string gateHost = 1;
	int32 gatePort = 2;
}

message GateRegisterResponse {
	repeated RegionServerInfo regions = 1;
}

message RegionRegisterRequest {
	string serverHost = 1;
	int32 serverPort = 2;
	int32 mapId = 3;
}

service UserWorldService {
	rpc userArrivedWorld (UserArrivedWorldRequest) returns (CommonResponse) {}
	rpc userTransToMap (UserTransToMapRequest) returns (CommonResponse) {}
}

service WorldService {
	rpc registerGate (GateRegisterRequest) returns (GateRegisterResponse) {}
	rpc registerRegion (RegionRegisterRequest) returns (CommonResponse) {}
}
